--- a/vault.html
+++ b/vault.html
@@ -96,83 +96,107 @@
   </div>
 
     <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-storage.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-storage.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCJwqDFZtf1PkZwAalOaf2_7eWtej5HIfA",
-      authDomain: "y2k-arcade.firebaseapp.com",
-      projectId: "y2k-arcade",
-      storageBucket: "y2k-arcade.appspot.com",
-      messagingSenderId: "1063043176357",
-      appId: "1:1063043176357:web:20bc22e9cbf269ff40fa4c"
+const firebaseConfig = {
+  apiKey: "AIzaSyCJwqDFZtf1PkZwAalOaf2_7eWtej5HIfA",
+  authDomain: "y2k-arcade.firebaseapp.com",
+  projectId: "y2k-arcade",
+  storageBucket: "y2k-arcade.appspot.com",
+  messagingSenderId: "1063043176357",
+  appId: "1:1063043176357:web:20bc22e9cbf269ff40fa4c"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+const storage = getStorage(app);
+
+let currentWallet = "";
+let selectedFile = null;
+
+const connectBtn = document.getElementById("connectBtn");
+const createBtn = document.getElementById("createBtn");
+const enterBtn = document.getElementById("enterVaultBtn");
+const pfpPreview = document.getElementById("pfpPreview");
+
+document.getElementById("pfpUpload").addEventListener("change", (e) => {
+  selectedFile = e.target.files[0];
+  if (selectedFile) {
+    const reader = new FileReader();
+    reader.onload = () => { pfpPreview.src = reader.result; };
+    reader.readAsDataURL(selectedFile);
+  }
+});
+
+connectBtn.addEventListener("click", async () => {
+  try {
+    if (!window.ethereum) {
+      alert("MetaMask not found");
+      return;
+    }
+
+    const provider = new ethers.providers.Web3Provider(window.ethereum);
+    await provider.send("eth_requestAccounts", []);
+    const signer = provider.getSigner();
+    const address = await signer.getAddress();
+    currentWallet = address.toLowerCase();
+
+    const message = "By signing this, I acknowledge the risks of gambling in the Quantum Vault.";
+    await signer.signMessage(message);
+
+    console.log("Wallet connected:", currentWallet);
+
+    connectBtn.style.display = "none";
+    createBtn.style.display = "inline-block";
+  } catch (err) {
+    console.error("Connect/sign error:", err);
+  }
+});
+
+createBtn.addEventListener("click", async () => {
+  console.log("CREATE CLICKED:", currentWallet);
+
+  const username = document.getElementById("username").value.trim();
+  const xHandle = document.getElementById("xHandle").value.trim();
+
+  if (!currentWallet || !username) {
+    alert("Username is required.");
+    return;
+  }
+
+  try {
+    let pfpUrl = "";
+    if (selectedFile) {
+      const storageRef = ref(storage, `pfps/${currentWallet}`);
+      const snapshot = await uploadBytes(storageRef, selectedFile);
+      pfpUrl = await getDownloadURL(storageRef);
+      console.log("PFP Uploaded:", pfpUrl);
+    }
+
+    const userData = {
+      username,
+      xHandle,
+      pfpUrl,
+      profileCreated: true
     };
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const storage = getStorage(app);
+    console.log("Saving user data:", userData);
+    await setDoc(doc(db, "users", currentWallet), userData, { merge: true });
 
-    let currentWallet = "";
-    let selectedFile = null;
+    enterBtn.style.display = "inline-block";
+    createBtn.style.display = "none";
+    alert("Profile created!");
+  } catch (err) {
+    console.error("Create failed:", err);
+    alert("Error saving profile.");
+  }
+});
 
-    const connectBtn = document.getElementById("connectBtn");
-    const createBtn = document.getElementById("createBtn");
-    const pfpUpload = document.getElementById("pfpUpload");
-    const pfpPreview = document.getElementById("pfpPreview");
-
-    pfpUpload.addEventListener("change", (e) => {
-      selectedFile = e.target.files[0];
-      if (selectedFile) {
-        const reader = new FileReader();
-        reader.onload = () => { pfpPreview.src = reader.result; };
-        reader.readAsDataURL(selectedFile);
-      }
-    });
-
-    connectBtn.addEventListener("click", async () => {
-      if (!window.ethereum) return alert("MetaMask not found");
-
-      const provider = new ethers.providers.Web3Provider(window.ethereum);
-      await provider.send("eth_requestAccounts", []);
-      const signer = provider.getSigner();
-      currentWallet = (await signer.getAddress()).toLowerCase();
-
-      const disclaimer = "By signing this, I acknowledge the risks of gambling in the Quantum Vault.";
-      await signer.signMessage(disclaimer);
-
-      connectBtn.style.display = "none";
-      createBtn.style.display = "inline-block";
-    });
-
-    createBtn.addEventListener("click", async () => {
-      const username = document.getElementById("username").value.trim();
-      const xHandle = document.getElementById("xHandle").value.trim();
-      if (!currentWallet || !username) return alert("Username is required.");
-
-      let pfpUrl = "";
-      if (selectedFile) {
-        const storageRef = ref(storage, `pfps/${currentWallet}`);
-        await uploadBytes(storageRef, selectedFile);
-        pfpUrl = await getDownloadURL(storageRef);
-      }
-
-      const userData = {
-        username,
-        xHandle,
-        pfpUrl,
-        profileCreated: true
-      };
-
-      try {
-        await setDoc(doc(db, "users", currentWallet), userData, { merge: true });
-        alert("Profile created!");
-        window.location.href = "/vault.html";
-      } catch (err) {
-        console.error("Profile creation error:", err);
-        alert("Failed to create profile.");
-      }
-    });
-  </script>
+enterBtn.addEventListener("click", () => {
+  window.location.href = "/vault.html";
+});
+</script>
 </body>
 </html>
